[metadata]
name = userapp
version = attr:userapp.VERSION
author = Javier Llopis
author_email = javier@llopis.me
description = Bottle extension for user authentication based on pgusers
long_description = file: README.rst
url = https://github.com/destrangis/userapp

[options]
install_requires =
    bottle
    pgusers
setup_requires =
    bottle
    pgusers
py_modules = userapp
